<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgwithout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Practice" >

    <TextView
        android:id="@+id/scorePracticeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/score"
   		android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textPracticeQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/scorePracticeText"
        android:layout_below="@+id/scorePracticeText"
        android:layout_marginTop="14dp"
        android:text="@string/population"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Garnet" />

    <Button
        android:id="@+id/buttonPractice4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPractice3"
        android:layout_alignRight="@+id/buttonPractice3"
        android:layout_below="@+id/buttonPractice3"
        android:layout_marginTop="18dp"
        android:background="@null"
        android:textColor="@android:color/white"
        android:text="@string/press_me4" />

    <Button
        android:id="@+id/buttonPractice3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPractice2"
        android:layout_alignRight="@+id/buttonPractice2"
        android:layout_below="@+id/buttonPractice2"
        android:layout_marginTop="18dp"
        android:background="@null"
        android:text="@string/press_me3"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonPractice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPracticeBackCredits"
        android:layout_alignRight="@+id/buttonPracticeBackCredits"
        android:layout_below="@+id/buttonPracticeBackCredits"
        android:layout_marginTop="18dp"
        android:background="@null"
        android:text="@string/press_me2"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textPracticeAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPracticeBackCredits"
        android:layout_below="@+id/textPracticeQuestion"
        android:layout_marginTop="44dp"
        android:text="@string/population"
        android:textColor="@color/White"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textPracticeBeginner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/scorePracticeText"
        android:layout_alignBottom="@+id/scorePracticeText"
        android:layout_toLeftOf="@+id/scorePracticeText"
        android:text="@string/scoreLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/buttonPracticeBackCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textPracticeAnswers"
        android:layout_alignLeft="@+id/textPracticeQuestion"
        android:layout_alignRight="@+id/scorePracticeText"
        android:background="@null"
        android:longClickable="false"
        android:text="@string/press_me"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonPracticeAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPractice4"
        android:layout_below="@+id/buttonPractice4"
        android:layout_marginLeft="51dp"
        android:background="@null"
        android:text="@string/Answers"
        android:textColor="@android:color/white" />

</RelativeLayout>
