<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgwithout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:splitMotionEvents="false"
    tools:context=".PolyBotes" >

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/score"
   		android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
        android:id="@+id/textCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="true"
        android:text="@string/score"
   		android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonBackCredits"
        android:layout_alignRight="@+id/scoreText"
        android:layout_below="@+id/scoreText"
        android:layout_marginTop="14dp"
        android:text="@string/population"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Garnet" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="18dp"
        android:background="@null"
        android:textColor="@android:color/white"
        android:text="@string/press_me4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="18dp"
        android:background="@null"
        android:text="@string/press_me3"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonBackCredits"
        android:layout_alignRight="@+id/buttonBackCredits"
        android:layout_below="@+id/buttonBackCredits"
        android:layout_marginTop="18dp"
        android:background="@null"
        android:text="@string/press_me2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonBackCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/scoreText"
        android:layout_below="@+id/scoreText"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:longClickable="false"
        android:text="@string/press_me"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textBeginner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/scoreText"
        android:layout_alignBottom="@+id/scoreText"
        android:layout_toLeftOf="@+id/scoreText"
        android:text="@string/scoreLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/textAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonBackCredits"
        android:layout_below="@+id/textQuestion"
        android:layout_marginTop="44dp"
        android:text="@string/population"
        android:textColor="@color/White"
        android:visibility="invisible" />

</RelativeLayout>